# cv-lab

./: .gitignore  CMakeLists.txt  README.MD
includes/: MonoLoop.h  header.h  stdafx.h
project/: project.sln
project/project/: project.vcxproj  project.vcxproj.filters
src/: LiveLoop.cpp  MonoLoop.cpp  OpenCVLiveLoopVC12.cpp  Server.cpp  main.cpp  stdafx.cpp
