cmake_minimum_required(VERSION 3.5.1)
set(CMAKE_CXX_STANDARD 17)
project(object_tracking)
find_package(OpenCV REQUIRED)
find_package(Boost 1.68.0 REQUIRED system)
find_package(websocketpp REQUIRED system)
find_package(Threads REQUIRED)
set(THREADS_PREFER_PTHREAD_FLAG ON)

add_executable(object_tracking src/LiveLoop.cpp)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(object_tracking ${OpenCV_LIBS})
target_link_libraries(object_tracking ${websocketpp_LIBRARIES})
target_link_libraries(object_tracking Threads::Threads ${Boost_LIBRARIES})